--- a/Exploration/Quest2/project2.ipynb
+++ b/Exploration/Quest2/project2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37cbc540",
+   "id": "fc7f6939",
    "metadata": {},
    "source": [
     "# 데이터 가져오기"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "bcc3576d",
+   "execution_count": 62,
+   "id": "6a48541d",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,8 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "18a51d90",
+   "execution_count": 63,
+   "id": "ffbe7b90",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "((6493, 9), (10886, 12))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "5b1464cb",
+   "execution_count": 64,
+   "id": "86255e0b",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "4        56    11.0014  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85d0ebc",
+   "id": "a28643ec",
    "metadata": {},
    "source": [
     "# datetime 컬럼을 datetime 자료형으로 변환하고 연, 월, 일, 시, 분, 초까지 6가지 컬럼 생성"
@@ -318,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "9b69a058",
+   "execution_count": 65,
+   "id": "0b9b1ce6",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "4       0       0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6c5d59",
+   "id": "32ee77b6",
    "metadata": {},
    "source": [
     "# year, month, day, hour, minute, second 데이터 개수 시각화"
@@ -535,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "6fc0388e",
+   "execution_count": 66,
+   "id": "7ff8d8d5",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30bcb518",
+   "id": "908e80fd",
    "metadata": {},
    "source": [
     "# X, y 컬럼 선택 및 train/test 데이터 분리"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "441c4ff7",
+   "id": "f66c6094",
    "metadata": {},
    "source": [
     "### minute, second, datetime features 삭제\n",
@@ -591,8 +591,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "86c93516",
+   "execution_count": 67,
+   "id": "4264b866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,17 +602,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c26141a0",
+   "id": "500e80df",
    "metadata": {},
    "source": [
-    "### Test data set에 없는 데이터 삭제\n",
-    "casual\tregistered 데이터는 test시에 필요 없으므로 삭제"
+    "### casual, registered 삭제\n",
+    "casual, registered 데이터는 test시에 필요 없으며 우리의 목표인 count값은 두 데이터의 합이므로 두 feature를 삭제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f03bce54",
+   "execution_count": 68,
+   "id": "b09fa73e",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "4      1  2011      1    1     4  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,16 +764,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83391e3b",
+   "id": "8c2926cb",
    "metadata": {},
    "source": [
-    "### 데이터 분리"
+    "### 데이터 분리\n",
+    "7:3의 비율로 데이터 분리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "3bfa7a3f",
+   "execution_count": 69,
+   "id": "23deb17e",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +783,7 @@
        "((7620, 12), (3266, 12), (7620,), (3266,))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,8 +801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "f9d36f15",
+   "execution_count": 70,
+   "id": "89543d67",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +936,7 @@
        "1458     22.0028  2011      4    6    15  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "623da1ca",
+   "id": "9d74cc1d",
    "metadata": {},
    "source": [
     "# LinearRegression 모델 학습"
@@ -954,8 +955,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "8bfae665",
+   "execution_count": 71,
+   "id": "d28dd77a",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +965,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61ae0d2",
+   "id": "fab7e194",
    "metadata": {},
    "source": [
     " # 학습된 모델로 X_test에 대한 예측값 출력 및 손실함수값 계산"
@@ -990,8 +991,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "411c0524",
+   "execution_count": 72,
+   "id": "4e7d68f4",
    "metadata": {},
    "outputs": [
     {
@@ -1005,17 +1006,65 @@
    ],
    "source": [
     "# 학습된 모델을 사용하여 예측\n",
-    "pred= model.predict(X_test)\n",
-    "\n",
-    "\n",
+    "pred= model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f18195",
+   "metadata": {},
+   "source": [
+    "### mse 손실함수 값"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "55e4a39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mse: 19514.733806701945\n"
+     ]
+    }
+   ],
+   "source": [
     "mse = mean_squared_error(y_test, pred)\n",
-    "print(\"mse:\", mse)\n",
+    "print(\"mse:\", mse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "046dc343",
+   "metadata": {},
+   "source": [
+    "### rmse 손실함수 값"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c5d741f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 139.69514596685866\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"rmse:\",mse**0.5)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cc0191c8",
+   "id": "d8694c82",
    "metadata": {},
    "source": [
     "# x축은 temp 또는 humidity로, y축은 count로 예측 결과 시각화하기\n",
@@ -1024,8 +1073,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "7d86070d",
+   "execution_count": 73,
+   "id": "9ff69d42",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1083,7 @@
        "<AxesSubplot:xlabel='humidity', ylabel='count'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1060,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75023000",
+   "id": "e9fd6397",
    "metadata": {},
    "outputs": [],
    "source": []
