--- a/Exploration/Quest3/kaggle.ipynb
+++ b/Exploration/Quest3/kaggle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d2bea1cb",
+   "id": "963e7964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c14e18",
+   "id": "667d89e9",
    "metadata": {},
    "source": [
     "### 데이터 가져오기"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "104b5fa9",
+   "id": "67d92d8e",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7a21aec5",
+   "id": "6a9b5242",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65931eb1",
+   "id": "958088d7",
    "metadata": {},
    "source": [
     "# EDA"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "adbb64e4",
+   "id": "dee838cc",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1bb5705c",
+   "id": "669e319c",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0bcc6912",
+   "id": "44316f15",
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f32937b2",
+   "id": "dfc7e34f",
    "metadata": {},
    "source": [
     "### id 삭제 및 date변수 정리"
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "062adbc3",
+   "id": "55d9e8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "982cef98",
+   "id": "8c3df4a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c56d63d1",
+   "id": "9bdbbd7a",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6531c861",
+   "id": "c5060fae",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24fd52e5",
+   "id": "7250acdd",
    "metadata": {},
    "source": [
     "## 시각화"
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165fa862",
+   "id": "329c6d9c",
    "metadata": {},
    "source": [
     "### 모든 컬럼에 대한 분포 확인"
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0f0b42e6",
+   "id": "2c9078d7",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608820ba",
+   "id": "3a0ea31e",
    "metadata": {},
    "source": [
     "**치우친 컬럼들을 로그 변환(log-scaling)을 통해 데이터 분포를 정규분포에 가깝게 만듬**\n",
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c0782fb8",
+   "id": "9f829b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6588ac16",
+   "id": "a1505f4a",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef43583f",
+   "id": "539a9d4b",
    "metadata": {},
    "source": [
     "### 히트맵 도식화\n",
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2ec38cb3",
+   "id": "c5fb3009",
    "metadata": {},
    "outputs": [
     {
@@ -1270,14 +1270,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b3d09f5",
+   "id": "5b42df7a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "51daa83b",
+   "id": "a726cec1",
    "metadata": {},
    "source": [
     "### y데이터 분포 확인"
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "57503618",
+   "id": "bec00fca",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f89902",
+   "id": "f662a06f",
    "metadata": {},
    "source": [
     "데이터가 한쪽으로 치우쳐 있으므로 로그함수로 변함"
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b6f19964",
+   "id": "9816bb3f",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5bd8a64",
+   "id": "332ae027",
    "metadata": {},
    "source": [
     "# 모델학습 및 평가"
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d8442040",
+   "id": "be0ba8de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5dcdbee2",
+   "id": "1186321b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "42d6d6de",
+   "id": "d5456851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a30733",
+   "id": "fc837418",
    "metadata": {},
    "source": [
     "### 모델함수 정의"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5ba5ab79",
+   "id": "84249b18",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439ab7ba",
+   "id": "844dc4aa",
    "metadata": {},
    "source": [
     "### Bayesian Optimization을이용한 하이퍼 파라미터 최적화"
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d4f41878",
+   "id": "dd4f3be0",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "79551d1e",
+   "id": "a266de5b",
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7c16e10d",
+   "id": "4118b8f1",
    "metadata": {},
    "outputs": [
     {
@@ -1542,8 +1542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "645b741b",
+   "execution_count": 89,
+   "id": "aad179d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,9 +1553,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4672f89c",
+   "metadata": {},
+   "source": [
+    "### lightgbm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ffe1bfd5",
+   "id": "851c325d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,8 +1596,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "eacb6fa5",
+   "execution_count": 91,
+   "id": "7ae51030",
    "metadata": {},
    "outputs": [
     {
@@ -1607,19 +1615,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "1c87345f",
+   "execution_count": 94,
+   "id": "603ee675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def skopt_xgb_tuning(X, y, n_iter=25, cv=5):\n",
+    "    model = xgb.XGBRegressor()\n",
+    "    search_spaces = {\n",
+    "        \"n_estimators\": Integer(50, 200),\n",
+    "        \"max_depth\": Integer(3, 10),\n",
+    "        \"learning_rate\": Real(0.01, 0.3, prior=\"log-uniform\"),\n",
+    "        \"subsample\": Real(0.5, 1, prior=\"uniform\"),\n",
+    "        \"colsample_bytree\": Real(0.5, 1, prior=\"uniform\"),\n",
+    "        \"reg_alpha\": Real(0, 1, prior=\"uniform\"),\n",
+    "        \"reg_lambda\": Real(0, 1, prior=\"uniform\"),\n",
+    "        \"gamma\": Real(0, 5, prior=\"uniform\"),  # XGBoost 특유의 하이퍼파라미터\n",
+    "        \"min_child_weight\": Integer(1, 10),  # XGBoost 특유의 하이퍼파라미터\n",
+    "    }\n",
+    "\n",
+    "    opt = BayesSearchCV(\n",
+    "        model,\n",
+    "        search_spaces,\n",
+    "        n_iter=n_iter,\n",
+    "        cv=cv,\n",
+    "        scoring=\"neg_mean_squared_error\",\n",
+    "        n_jobs=-1,\n",
+    "        random_state=42,\n",
+    "    )\n",
+    "\n",
+    "    opt.fit(X, y)\n",
+    "\n",
+    "    return opt.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "ca72e46d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "120328.07064560462"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('colsample_bytree', 0.705051979426657), ('learning_rate', 0.11883357504897696), ('max_depth', 14), ('num_leaves', 45), ('reg_alpha', 0.6701479482689346), ('reg_lambda', 0.4141186324855385), ('subsample', 0.675465667449572)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def skopt_xgb_tuning(X_train, y_train)\n",
+    "print(best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "5a5619e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_137/4290700139.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# 예측 및 성능 평가\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbest_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mrmse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrmse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mrmse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     ]
     }
    ],
    "source": [
@@ -1627,7 +1691,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# 최적의 하이퍼파라미터로 모델 생성 및 학습\n",
-    "best_model = lgb.LGBMRegressor(**best_params)\n",
+    "best_model = skopt_xgb_tuning(**best_params)\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "# 예측 및 성능 평가\n",
@@ -1639,8 +1703,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "id": "5bf0b3d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_137/1846973717.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"xgboost\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"lightgbm\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mAveragingBlending\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msub_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodels\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "models(\"xgboost\", \"lightgbm\")\n",
+    "def AveragingBlending(models, x, y, sub_x):\n",
+    "    for m in models : \n",
+    "        m['model'].fit(x.values, y)\n",
+    "    \n",
+    "    predictions = np.column_stack([\n",
+    "        m['model'].predict(sub_x.values) for m in models\n",
+    "    ])\n",
+    "    return np.mean(predictions, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
-   "id": "ad7279f7",
+   "id": "0f72df7b",
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "7981161d",
+   "id": "929706a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "23bd1d43",
+   "id": "4220b9fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,8 +1778,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "ff922abc",
+   "execution_count": 87,
+   "id": "b0b45cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub.head()\n",
+    "sub.to_csv('submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "bd406fbb",
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1857,7 @@
        "4  15039  3.293628e+05"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020c8949",
+   "id": "f6e1fc3a",
    "metadata": {},
    "outputs": [],
    "source": []
