--- a/Exploration/Quest5/인물사진 만들기.ipynb
+++ b/Exploration/Quest5/인물사진 만들기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60796951",
+   "id": "70b9eb99",
    "metadata": {},
    "source": [
     "# step 1 - 인물사진 만들기"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9193d401",
+   "id": "a6a06a8c",
    "metadata": {},
    "source": [
     "### 1. 인물사진 가져오기"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "6697e3f1",
+   "id": "4c74bb95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "11258306",
+   "id": "e4268459",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ebcafc7d",
+   "id": "fece1556",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c4a22f",
+   "id": "6a345fa5",
    "metadata": {},
    "source": [
     "### 2. DeepLab 모델을 준비하기"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "c3e140df",
+   "id": "45804791",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "bb94862f",
+   "id": "99b3c6ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63230bc6",
+   "id": "7f05d32b",
    "metadata": {},
    "source": [
     "### 3. image segmentation"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "76f53d25",
+   "id": "e8bfb115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "f2bc12bc",
+   "id": "12dc1f90",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "d495678b",
+   "id": "9b94acfb",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "21ff9ffb",
+   "id": "fd7f2ca0",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "267657e0",
+   "id": "8aafb153",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "f05950eb",
+   "id": "cf239080",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "46f7b77c",
+   "id": "e19442e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "d52c446f",
+   "id": "12680f94",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "d7f79ebc",
+   "id": "23d3c4a2",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "634e5658",
+   "id": "53cc564b",
    "metadata": {},
    "source": [
     "### 4.배경 흐리게하기"
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "48d161a6",
+   "id": "c348769c",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "14718ca6",
+   "id": "8a83bd3c",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "c36659e3",
+   "id": "90cd429a",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "e4807194",
+   "id": "748da1ff",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9a2476",
+   "id": "8722acd4",
    "metadata": {},
    "source": [
     "### 5.사진에서 문제점 찾기"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628b191a",
+   "id": "0a58575b",
    "metadata": {},
    "source": [
     "![사진](output_image-2.png)\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a357ca",
+   "id": "090bf07e",
    "metadata": {},
    "source": [
     "# step-2 여러 사람이 있는 사진 blur처리 해보기"
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778ca5d7",
+   "id": "efdfd8f1",
    "metadata": {},
    "source": [
     "![사진](travel.png)\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c870014",
+   "id": "af120227",
    "metadata": {},
    "source": [
     "### 1. 사진 가져오기"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "10889f1d",
+   "id": "dadaab7c",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "0a1506b7",
+   "id": "3e4370b9",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "fe814b60",
+   "id": "a48f6f69",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb88ce0",
+   "id": "e0a3232b",
    "metadata": {},
    "source": [
     "### 2.  image segmentation"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "97818981",
+   "id": "0b2cc7cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "ef78753f",
+   "id": "57f18c81",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "8ef62a56",
+   "id": "04ea9d75",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "7c042b52",
+   "id": "c050ebda",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "d8e61367",
+   "id": "a222de73",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "2b80faf1",
+   "id": "ff8d6bcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "a1514dc5",
+   "id": "6d97fceb",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "1e56bd53",
+   "id": "7af1cc68",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b36cc5",
+   "id": "72264995",
    "metadata": {},
    "source": [
     "### 3. blur 처리"
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "df23e34c",
+   "id": "0bce7b22",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "3dc1e82f",
+   "id": "b6e9b8d4",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "5c069cbf",
+   "id": "77d911c9",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9d15c8",
+   "id": "2ab1eb1c",
    "metadata": {},
    "source": [
     "### 4. 사진에서 문제점 찾기"
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3823dee9",
+   "id": "c10be35e",
    "metadata": {},
    "source": [
     "![사진](output_image.png)\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88ade424",
+   "id": "5dcb554f",
    "metadata": {},
    "source": [
     "### 5. 배경전한 크로마키사진 제작하기"
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "33202d76",
+   "id": "ee32265e",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "54af411e",
+   "id": "babd5f39",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "d91f5cf8",
+   "id": "bf2a4a59",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15f66f4",
+   "id": "4c82d887",
    "metadata": {},
    "source": [
     "# step-3 동물사진 blur 처리 하기"
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b26587",
+   "id": "d799074a",
    "metadata": {},
    "source": [
     "### 1. 사진 가져오기"
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "825a1dec",
+   "id": "168b1034",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa9bcbe5",
+   "id": "335e7723",
    "metadata": {},
    "source": [
     "### 2. image segmentation"
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "e888487b",
+   "id": "13341698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "81aaad6e",
+   "id": "b265b7b5",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "b1c4af95",
+   "id": "bfdebc19",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "71e442c8",
+   "id": "c022ab3d",
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "90667b5f",
+   "id": "e45af6a6",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "ab06a8c5",
+   "id": "8c5f8187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "fb2d1749",
+   "id": "57a95002",
    "metadata": {
     "scrolled": true
    },
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "5e8063e6",
+   "id": "ad362632",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a96cff",
+   "id": "3cb64778",
    "metadata": {},
    "source": [
     "### 3. blur 처리"
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "f4db6a8c",
+   "id": "537f0e63",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "8580ca7e",
+   "id": "f0040201",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "6761214c",
+   "id": "15096b7f",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0637db4e",
+   "id": "c3ad2ae8",
    "metadata": {},
    "source": [
     "### 4. 사진에서 문제점 찾기"
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "ad7f2640",
+   "id": "ab6ecf1d",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d05c547",
+   "id": "f4b63ede",
    "metadata": {},
    "source": [
     "![소이미지](blur_cow_img.png)"
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d012719",
+   "id": "754788da",
    "metadata": {},
    "source": [
     "- 복잡한 여러마리의 소를 인식하는 과정에서 많은 문제점이 발견됨\n",
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c5aa27",
+   "id": "92890c44",
    "metadata": {},
    "source": [
     "### 5. 배경전환 크로마키 사진 제작하기"
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "b844deea",
+   "id": "aef7e4b0",
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "0ed8057d",
+   "id": "3e7598a1",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "03010ddc",
+   "id": "c4b21523",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2b0b11",
+   "id": "9b466874",
    "metadata": {},
    "source": [
     "# step-4 인물모드 사진의 문제점을 개선할 수 있는 솔루션"
@@ -1625,10 +1625,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8888649",
+   "id": "ca1211f7",
    "metadata": {},
    "source": [
-    "### 1. DeepLab 모델의 Semantic Segmentation 문제점\n",
+    "## 1. DeepLab 모델의 Semantic Segmentation 문제점\n",
     "\n",
     "**1. 섬세한 경계를 표현하는데 문제가 있음**\n",
     "- 대체적으로 객체 인식은 잘 되지만 소의 다리, 삐져나온 옷 등 디테일한 부분에서 객체 인식이 잘 안됨\n",
@@ -1640,23 +1640,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959d770c",
+   "id": "18373bec",
    "metadata": {},
    "source": [
-    "### 2. 해결 방법 "
+    "## 2. 해결 방법 "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb90013e",
+   "id": "3e909505",
    "metadata": {},
    "source": [
-    "**2-1)픽셀마다 피사계 심도를 조절해보자** \n"
+    "### 2-1)픽셀마다 피사계 심도를 조절해보자\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a001439e",
+   "id": "c9576aef",
    "metadata": {},
    "source": [
     "**문제점**  \n",
@@ -1675,8 +1675,8 @@
     "- Left image, right image 의 같은 지점을 찍었을때의 차이 구함\n",
     "- 멀리있을 경우 차이가 큼, 가까운 경우 작음\n",
     "\n",
-    "두개의 사진이 필요한거 아니야?\n",
-    "- Mono Depth를 추정하기 위해 Left image를 통해서 2개의 Disparity를 뽑아낼 수 있다고 함\n",
+    "**두개의 사진이 필요한거 아니야?**\n",
+    "- Mono Depth를 추정하기 위해 한개의 Left image를 통해서 Disparity를 뽑아낼 수 있다고 함\n",
     "\n",
     "**work flow**\n",
     "1. 사진 촬영\n",
@@ -1685,13 +1685,19 @@
     "4. 모델결과를 바탕으로 객체를 나타내는 mask생성\n",
     "5. mask 정보와 depth 값을 결합\n",
     "6. 인물과 배경 분리\n",
-    "7. depth에 따라 차등으로 blur효과적용\n",
-    "8. 이미지출력\n"
+    "7. depth에 따라 차등으로 피사계 심도 효과적용\n",
+    "8. 이미지출력\n",
+    "\n",
+    "**기존 Semantic Segmentation과의 다른점**\n",
+    "\n",
+    "기존 Semantic Segmentation은 섬세한 경계에서의 blur 부분에서의 문제가 빈번히 발생됨\n",
+    "-> Mono Depth Estimation활용하여 Depth map을 계산하고 객체의 mask를 생성한 후 거리차이를 통해 디테일한 부분까지 피사계 심도를 차등적으로 적용할 수 있음\n",
+    "-> depth를 이용하여 피사계 심도가 차등적으로 적용되면서 outfocusing더 자연스럽게 처리될 수 있을 것이라 예상됨\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1fedf3fd",
+   "id": "ae532c33",
    "metadata": {},
    "source": [
     "## 회고"
@@ -1699,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd60cbfe",
+   "id": "14444e2e",
    "metadata": {},
    "source": [
     "**배운점**\n",
@@ -1724,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9edc8dfc",
+   "id": "91825f70",
    "metadata": {},
    "outputs": [],
    "source": []
