--- a/Exploration/Quest8/10. 트랜스포머로 만드는 대화형 챗봇 [프로젝트] -1.ipynb
+++ b/Exploration/Quest8/10. 트랜스포머로 만드는 대화형 챗봇 [프로젝트] -1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31ccea9c",
+   "id": "92a6537b",
    "metadata": {},
    "source": [
     "# 1. 데이터가져오기"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1e9772be",
+   "id": "9416b186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d93b627d",
+   "id": "a6b7474b",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df3aae41",
+   "id": "b17de894",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "599ec33b",
+   "id": "54e13561",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ae2088",
+   "id": "7084af3c",
    "metadata": {},
    "source": [
     "# 2. 데이터 전처리"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "48d7412f",
+   "id": "1f54e095",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5bc8d1fa",
+   "id": "5215b581",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "37b74278",
+   "id": "b0688943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "916bc079",
+   "id": "eaea324f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256033cc",
+   "id": "38d03b9a",
    "metadata": {},
    "source": [
     "# 3. 병렬 데이터 전처리하기"
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4271648e",
+   "id": "e568f749",
    "metadata": {},
    "source": [
     "## 3-1) 단어장(Vocabulary) 만들기 "
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f86625ba",
+   "id": "ed03426d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a20670cc",
+   "id": "febd884b",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9f37c288",
+   "id": "05b0691f",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "05395cd9",
+   "id": "07fb5512",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b9164c",
+   "id": "5a863f57",
    "metadata": {},
    "source": [
     "## 3-2) 각 단어를 고유한 정수로 인코딩(Integer encoding) & 패딩(Padding)"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cf657c6b",
+   "id": "92ceebab",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b3d64ea8",
+   "id": "47356775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "16b16af6",
+   "id": "44503ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4fe13059",
+   "id": "7f8840da",
    "metadata": {
     "scrolled": true
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29e347a",
+   "id": "f9222867",
    "metadata": {},
    "source": [
     "## 3-3) 교사 강요(Teacher Forcing) 사용하기"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e02c34ec",
+   "id": "2bc21f6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d34a2c2",
+   "id": "e537c343",
    "metadata": {},
    "source": [
     "# 4. 모델 정의 "
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e4f341b",
+   "id": "952694d8",
    "metadata": {},
    "source": [
     "## 4-0) PositionalEncoding"
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "43307464",
+   "id": "a1d8e36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75e47a8",
+   "id": "b5640e10",
    "metadata": {},
    "source": [
     "## 4-1) scaled_dot_product_attention"
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c67a9e3c",
+   "id": "8fe05e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f71b4115",
+   "id": "d24a654c",
    "metadata": {},
    "source": [
     "## 4-2 ) MultiHeadAttention"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "62055fd3",
+   "id": "a4670bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077b646e",
+   "id": "ad61f70e",
    "metadata": {},
    "source": [
     "## 4-3) Masking"
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3045d976",
+   "id": "6c049a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6518aaa8",
+   "id": "0e3bde06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c1b6e8",
+   "id": "87413c31",
    "metadata": {},
    "source": [
     "## 4-4) 인코더"
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52ed1bc",
+   "id": "5cb62c91",
    "metadata": {},
    "source": [
     "### 인코더 하나의 레이어"
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "efafbe5d",
+   "id": "4875383f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4babd860",
+   "id": "1ffdd142",
    "metadata": {},
    "source": [
     "### 인코더 층"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cb8f6481",
+   "id": "ba0293a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43328c0c",
+   "id": "51378ac2",
    "metadata": {},
    "source": [
     "## 4-5) 디코더"
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab933dc",
+   "id": "9a5a113c",
    "metadata": {},
    "source": [
     "### 디코더 레이어"
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3d214063",
+   "id": "f68efba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d274bd3",
+   "id": "79829f0f",
    "metadata": {},
    "source": [
     "### 디코더 층"
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2c22ba5c",
+   "id": "2cf0e814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c7624e1",
+   "id": "895ebfbb",
    "metadata": {},
    "source": [
     "## 4-6) 트랜스포머 함수 정의"
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6102d42b",
+   "id": "0d910be4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085e3f2c",
+   "id": "5c4879fb",
    "metadata": {},
    "source": [
     "# 5. 모델 생성 및 학습"
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44df1160",
+   "id": "00dd89a1",
    "metadata": {},
    "source": [
     "## 5-1) 모델 생성"
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "05fecf6a",
+   "id": "0cd42fa6",
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d10436",
+   "id": "5b41a9b4",
    "metadata": {},
    "source": [
     "## 5-2) 손실함수"
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4a6239f3",
+   "id": "3167b6cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e57a42",
+   "id": "bb521072",
    "metadata": {},
    "source": [
     "## 5-3) 커스텀 된 학습률(Learning rate)"
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f02db7b1",
+   "id": "80858a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa28d266",
+   "id": "0c0fc6b6",
    "metadata": {},
    "source": [
     "## 5-4) 모델 컴파일"
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "db2d38f0",
+   "id": "9a6eca53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cacd02fa",
+   "id": "075b082a",
    "metadata": {},
    "source": [
     "## 5-5) 훈련하기"
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "49d879ea",
+   "id": "998b71ba",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c8e55e",
+   "id": "2bc34a0f",
    "metadata": {},
    "source": [
     "# 6. 챗봇 테스트"
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9f15acac",
+   "id": "1134e0f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c538ac5a",
+   "id": "9a350713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "35cf5423",
+   "id": "3875457f",
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "7b45837f",
+   "id": "a89ca39d",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2617f45c",
+   "id": "6355aaea",
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bb3c6f24",
+   "id": "54da565d",
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ef54e6bf",
+   "id": "92030f98",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "42cd851d",
+   "id": "69a99ecb",
    "metadata": {},
    "outputs": [
     {
@@ -1573,8 +1573,10 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "002aafb1",
-   "metadata": {},
+   "id": "2dc0fb2f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1602,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7e999788",
+   "id": "818290a8",
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a068b495",
+   "id": "beac89f4",
    "metadata": {},
    "outputs": [
     {
@@ -1658,9 +1660,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa50b86a",
+   "metadata": {},
+   "source": [
+    "**프로젝트 회고**\n",
+    "1. 배운 점\n",
+    "   - 이번 lms를 진행하면서 transformor의 개념을  이해할 수 있었음\n",
+    "2. 아쉬운 점\n",
+    "   - 데이터량이 부족하고, 모델 볼륨이 낮아서 답변이 아쉬웠음\n",
+    "4. 느낀 점\n",
+    "   - 답변이 재밌었음\n",
+    "6. 어려웠던 점\n",
+    "   - 이전에는 레이어만 쌓은 모델만 실습하다가 복잡한 모델을 경험해서 그런지 공부가 더 필요해보임"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af526463",
+   "id": "fa6bdbd5",
    "metadata": {},
    "outputs": [],
    "source": []
